Science AI Engineering/mes9_production/k8s/00-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bps-dev
---
apiVersion: v1
kind: Namespace
metadata:
  name: bps-staging
---
apiVersion: v1
kind: Namespace
metadata:
  name: bps-prod
