Science AI Engineering/mes9_production/k8s/07-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bps-api-ingress
  namespace: bps-dev
  annotations:
    cert-manager.io/issuer: "bps-selfsigned-issuer"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - api.local
    secretName: bps-tls-secret
  rules:
  - host: api.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bps-api
            port:
              number: 8000
